# infomeasure-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  benchmark_data.json  benchmark_data_gpu.json  clippy.toml  index.html  katex-header.html  release-config.ts  release-plz.toml
.cargo/: config.toml
.docker/: Dockerfile
.github/workflows/: codspeed.yml
.woodpecker/: build-deps.yml  lint.yml  release-pr.yml  release.yml  test.yml
benches/: cmi.rs  cmi_discrete_bias_corrected.rs  count_frequencies_benchmark.rs  cte.rs  cte_discrete_bias_corrected.rs  discrete_entropy_benchmark.rs  entropy_discrete.rs  entropy_discrete_bias_corrected.rs  entropy_expfam.rs  entropy_ordinal.rs  kernel_gpu.rs  kernel_gpu_codspeed.rs  mi.rs  mi_discrete_bias_corrected.rs  mi_expfam.rs  scaling_nd.rs  te.rs  te_discrete_bias_corrected.rs  unified_discrete_entropy_benchmark.rs  unified_kernel_entropy_benchmark.rs
benches/utils/: data.rs  hardware.rs  mod.rs
docs/: benchmark_viewer.html  kernel_const_generics.md  kernel_dimensions.md
examples/: ansb_api_example.rs  discrete_entropy_example.rs  gaussian_kernel_analysis.rs  kernel_entropy_example.rs
scripts/: aggregate_results.py  collect_rust_results.py  compare_benchmarks.py  generate_benchmark_json.py  python_benchmark.py  run_all_benchmarks.py  run_full_benchmark_suite.sh  transform-refs.sh
src/: lib.rs
src/estimators/: doc_macros.rs  entropy.rs  mod.rs  mutual_information.rs  traits.rs  transfer_entropy.rs
src/guide/: benchmarks.rs  cond_entropy.rs  cond_mi.rs  cond_te.rs  cross_entropy.rs  estimator_selection.rs  estimator_usage.rs  introduction.rs  jsd.rs  kld.rs  macros.rs  mod.rs  mutual_information.rs  references.rs  settings.rs  statistical_tests.rs  transfer_entropy.rs
tests/: all_tests.rs  box_kernel_gpu_test.rs  discrete_entropy_tests.rs  fast_exp_accuracy_test.rs  kernel_debug_test.rs  kernel_discrepancy_test.rs  kernel_entropy_test.rs  kernel_optimization_test.rs  python_interface_test.rs  python_validation_discrete_estimators.rs  test_helpers.rs
tests/common_nd/: dataset_tests.rs  mod.rs
tests/discrete/: ansb_parity.rs  ansb_sanity.rs  bayes_parity.rs  bayes_sanity.rs  bonachela_parity.rs  bonachela_sanity.rs  chao_shen_parity.rs  chao_shen_sanity.rs  chao_wang_jost_parity.rs  chao_wang_jost_sanity.rs  discrete_batch_sanity.rs  discrete_entropy_test.rs  discrete_gpu_smoke.rs  discrete_mi_te.rs  discrete_parity.rs  discrete_sanity.rs  discrete_utils.rs  grassberger_parity.rs  grassberger_sanity.rs  joint_entropy_parity.rs  miller_madow_cross_entropy_sanity.rs  miller_madow_parity.rs  miller_madow_sanity.rs  mod.rs  nsb_parity.rs  nsb_sanity.rs  ordinal_entropy.rs  shrink_parity.rs  shrink_sanity.rs  zhang_parity.rs  zhang_sanity.rs
tests/expfam/: kl_joint_cross_parity.rs  kl_python_parity.rs  ksg_parity.rs  ksg_sanity.rs  ksg_test.rs  mod.rs  python_utils_parity.rs  python_validation_expfam.rs  renyi_parity.rs  renyi_python_parity.rs  tsallis_parity.rs  tsallis_python_parity.rs  utils_tests.rs
tests/kernel/: box_kernel_gpu_test.rs  (+8 more)
tests/validation_crate/: Cargo.toml  environment.yml  mod.rs  python.rs  requirements.txt
(+57 files in other folders)
