[package]
name = "infomeasure"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17" # For numerical computations
kiddo = "5.2.0"  # KDtree
plotters = "0.3.7"
wgpu = "26.0"
pollster = "0.3"  # For blocking on async operations
futures-intrusive = "0.5"  # For oneshot channel
bytemuck = { version = "1.14", features = ["derive"] }  # For casting between byte slices and typed slices
statrs = "0.16"  # For special functions (digamma)
ndarray-stats = "0.7.0"  # covariance matrix
ndarray-linalg = { version = "0.18.1", features = ["openblas-static"] }  # .cholesky
rand = "0.8"
rand_distr = "0.4"

[features]
default = []
simd_support = []
gpu_support = []
fast_exp = []

[dev-dependencies]
rstest = "0.26.1"  # For fixture-based testint
serde_json = "1.0" # For JSON interop in Python parity tests
validation = { path = "./tests/validation_crate" }  # Local validation module for Python compatibility testing
rand = "0.8"      # For random number generation in tests
rand_distr = "0.4" # For generating different probability distributions in tests
approx = "0.5"    # For approximate floating-point comparisons in tests
ndarray = "0.17"  # For numerical computations in tests
criterion = "0.5"  # For benchmarking
csv = "1.3"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]  # Using katex@0.16.27

[[bench]]
name = "discrete_entropy_benchmark"
harness = false

[[bench]]
name = "unified_discrete_entropy_benchmark"
harness = false

[[bench]]
name = "unified_kernel_entropy_benchmark"
harness = false

[[bench]]
name = "count_frequencies_benchmark"
harness = false