[package]
name = "validation"
version = "0.1.0"
edition = "2024"

[lib]
path = "mod.rs"

[dependencies]
ndarray = "0.16"  # For numerical computations
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }  # For JSON parsing
rand = "0.8"      # For random number generation
which = "8.0"      # For finding uv executable
